[wheel]
universal = 1

[metadata]
version = 0.0.1+lineaje.1
maintainer = Lineaje DepFixer
maintainer_email = 221268890+Lineaje-DepFixer@users.noreply.github.com
url = https://github.com/lineaje-labs-gos/9seconds-iblocklist2ipset
project_urls = Homepage = https://github.com/lineaje-labs-gos/9seconds-iblocklist2ipset
	Repository = https://github.com/lineaje-labs-gos/9seconds-iblocklist2ipset
	Tracker = https://github.com/lineaje-labs-gos/9seconds-iblocklist2ipset/issues

